samples/_failures_safe/1761371349_f9d3b5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d5eafd98.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_d5eafd98.c:163:22: error: expected ‘;’ at end of input
  163 |         lexer->column
      |                      ^
      |                      ;
./samples/SAFE/__tmp_d5eafd98.c:163:9: error: expected declaration or statement at end of input
  163 |         lexer->column
      |         ^~~~~
./samples/SAFE/__tmp_d5eafd98.c:163:9: error: expected declaration or statement at end of input
